base/monitoring/prometheus-pushgateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-pushgateway
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - pushgateway.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-pushgateway
          port: 9091
